# FPLN_team3

./: .gitignore  ClasificacionDeTexto-backup086.ipynb  ClasificacionDeTexto.ipynb  Clasificador-logistic.ipynb  Clasificador-naives.ipynb  Competencia.ipynb  README.md  author_style_classifier.ipynb  author_style_classifier_word2vec.ipynb  data_test.csv  model_word2vec.pkl  pyproject.toml  sample_submission.csv  submission.csv
.ipynb_checkpoints/: ClasificacionDeTexto-checkpoint.ipynb  Clasificador-logistic-checkpoint.ipynb  author_style_classifier-checkpoint.ipynb
