[tool.poetry]
name = "fpln-team3"
version = "0.1.0"
description = ""
authors = ["FPLN Team 3"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
xgboost = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
