[tool.poetry]
name = "fpln-team3"
version = "0.1.0"
description = ""
authors = ["FPLN Team 3"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
xgboost = "^2.1.4"
imblearn = "^0.0"
nltk = "^3.9.1"
gensim = "^4.3.3"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
